Inicio de análisis en base a la métrica de las oraciones y su relación entre sí (base de metrica, rima y ritmo)

--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lorca-nlp": "1.0.12"
+    "express": "4.17.1",
+    "lorca-nlp": "1.0.12",
+    "nodemon": "2.0.4"
   }
 }
