--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "0.19.2",
     "express": "4.17.1",
+    "form-data": "3.0.0",
+    "leven": "3.1.0",
     "lorca-nlp": "1.0.12",
+    "node-fetch": "2.6.0",
     "nodemon": "2.0.4"
   }
 }
